[package]
name = "server"
edition.workspace = true
version.workspace = true

[[bench]]
name = "loadgen"
harness = false

[dependencies]
wire.workspace = true
storage.workspace = true
tokio.workspace = true
libc.workspace = true
io-uring    = "0.7"
clap = { version = "4.6.1", features = ["derive"] }
anyhow.workspace = true
bytes = "1.12.0"
slab = "0.4.12"

[lints]
workspace = true

[features]
allocator_debug = []
